tests/NormalTests/paczka1/fuzzy1/11123398.err
Error in line 1: JTuAM4CEg3E S597 34,8
Error in line 4: ZzSnnsNl A340 44,45
Error in line 8: ZzSnnsNl A340 139,3
Error in line 10: WLc6OWAcWkh A42 85,3
Error in line 13: WLc6OWAcWkh S404 96,2
Error in line 22: A42 S597 64,2
Error in line 31: sWTb9d S404 63,4
Error in line 33: A42 A42 46,4
